# leaves

./: .dockerignore  .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
.github/: docker-builds.yml
.github/workflows/: backend-docker.yml  code-server-docker.yml  jupyter-docker.yml  leaf-docker.yml
backend/app/: db.py  env.py  log.py  main.py
deploy/: docker-compose-dev.yml
deploy/backend/: Dockerfile  start.sh
deploy/code-server/: Dockerfile  start.sh
deploy/jupyter/: Dockerfile
deploy/leaf/: Dockerfile  start.sh
doc/: _config.yml  _toc.yml  index.md
doc/app/: app.ipynb  cf-tunnel.ipynb  network.ipynb  nodes.md
doc/deploy/: balena.ipynb  github-actions.ipynb
doc/leaf/: eventbus.ipynb  homeassistant.ipynb  network.ipynb
doc/leaf/eventbus/: client.ipynb  config.ipynb  eventbus.ipynb  events.ipynb
doc/leaf/homeassistant/: mqtt.ipynb
doc/lib/: client-server.ipynb
doc/lib/eventbus/: devices.ipynb  eventbus.ipynb
doc/lib/homeassistant/: mqtt.ipynb
doc/setup/: dev-on-server.ipynb  doc.ipynb  repo.ipynb
homeassistant/: esphome-can-bus.yaml
leaf/: main.py
leaf/notebooks/: app.ipynb  cpython-app.ipynb  micropython-app.ipynb  wifi.ipynb
leaf/remote/: main.py
leaf/remote/app/: __init__.py  cfg.py  led.py
leaf/remote/app/wifi/: __init__.py  c_python.py  cpython_wifi.py  micro_python.py  micropython_wifi.py
leaf/remote/eventbus/: __init__.py  ev_bus.py
leaf/remote/eventbus/devices/: __init__.py  switch.py  util.py
leaf/remote/eventbus/event_net/: __init__.py  bridge.py  transport.py  webserver.py
leaf/remote/eventbus/listeners/: config.py  log.py  sensor_state.py
leaf/remote/homeassistant/: mqtt.py
leaf/remote/lib/: typing.py
leaf/remote/plugins/: counter.py  debugger.py
leaf/remote/plugins/ble_scanner/: __init__.py
leaf/remote/plugins/core/: discover.py  hass_mqtt.py  log.py  mqtt_discovery.py  sensor_state.py  webserver.py
leaf/remote/util/: __init__.py  mac_address.py  with_cd.py
leaf/vm/: Makefile
leaf/vm/boards/ESP32_S3_N16R8/: board.json  mpconfigboard.cmake  mpconfigboard.h  sdkconfig.board
leaf/vm/boards/ESP32_S3_N16R8/modules/: bsp.py
leaf/vm/src/freeze/: main.py  manifest.py  version.py
leaf/vm/src/freeze/app/: __init__.py  gateway.py  led.py  main.py  ota.py  wifi.py
leaf/vm/src/freeze/lib/: ota32.py  typing.py
leaf/vm/src/freeze/lib/aiohttp/: aiohttp_ws.py
leaf/vm/src/freeze/lib/asyncio_extra/: __init__.py
leaf/vm/src/freeze/lib/urllib/: urequest.py
leaf/vm/src/freeze/plugins/: printer.py  reflect.py
leaf/vm/src/freeze/plugins/ble_scanner/: govee.py  victron.py
lib/eventbus/: __init__.py  bus.py  sensor_state.py  singleton.py
lib/eventbus/client_server/: server.py
lib/eventbus/devices/: __init__.py  binary_sensor.py  light.py  sensor.py
lib/homeassistant/: mqtt copy.py  mqtt.py
lib/test/: __init__.py  conftest.py  test_bus.py  test_devices.py  test_entities.py
test/: test_bus.py
