[project]
name = "leaves"
version = "0.1.0"
description = "Leaves - Connect sensors & actuators to the cloud"
authors = [{ name = "Bernhard Boser", email = "bernhard.e.boser@gmail.com" }]
dependencies = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "anyio>=4.4.0",
    "aiomqtt>=2.2.0",
    "uvicorn>=0.30.3",
    "fastapi>=0.111.1",
    "fastapi-async-sqlalchemy>=0.6.1",
    "sqlmodel>=0.0.21",
    "pydantic-settings>=2.4.0",
    "pydantic>=2.8.2",
    "alembic>=1.13.2",
    "python-dotenv>=1.0.1",
    "sqlalchemy-utils>=0.41.2",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "asyncer>=0.0.7",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "httpx-ws>=0.6.0",
    "aiohttp>=3.10.5",
    "cryptograpy>=0.0.0",
    "pyjwt>=2.8.0",
    "pyyaml>=6.0.1",
    "async-lru>=2.0.4",
    "async-timeout>=4.0.3",
    "ruff>=0.5.5",
    "mergedeep>=1.3.4",
    "pyopenssl>=24.2.1",
    "paramiko>=3.4.0",
    "colored>=2.2.4",
    "cachetools>=5.4.0",
    "asyncache>=0.3.1",
    "fastapi-analytics>=1.2.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter-book>=1.0.2",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",
    "ghp-import>=2.1.0",
    "mpremote>=1.23.0",
    "esptool>=4.7.0",
    "javascripthon>=0.13",
    "mpkernel>=0.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["lib/eventbus", "lib/homeassistant"]
