[project]
name = "leaves"
version = "0.1.0"
description = "Leaves - Connect sensors & actuators to the cloud"
authors = [{ name = "Bernhard Boser", email = "bernhard.e.boser@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.11"

dependencies = [
    "aiohttp>=3.9.5",
    "cryptograpy>=0.0.0",
    "pyjwt>=2.8.0",
    "pyyaml>=6.0.1",
    "mergedeep>=1.3.4",
    "pyopenssl>=24.1.0",
    "paramiko>=3.4.0",
    "colored>=2.2.4",
    "gitpython>=3.1.43",
    "microdot>=2.0.6",
    "aiomqtt>=2.3.0",
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    # "mpkernel @ file:///Users/boser/Dropbox/iot/mpkernel",
    "mpkernel>=0.0.1",
    "ipykernel>=6.29.3",
    "jupyter>=1.0.0",
    "jupyterlab>=4.1.5",
    "jupyter-book>=1.0.0",
    "pre-commit>=3.7.0",
    "ghp-import>=2.1.0",
    "pdoc>=14.4.0",
    "mpremote>=1.22.0",
    "esptool>=4.7.0",
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5.post1",
    "pytest-cov>=5.0.0",
    "pytest_mock>=3.14.0",
    "javascripthon>=0.12",
    "ruff>=0.3.2",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["alembic"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "leaf/remote/app",
    "leaf/remote/eventbus",
    "leaf/remote/homeassistant",
    "leaf/remote/plugins",
    "leaf/remote/remote/util",
]
